--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-critters-container>
 <head>
   <meta charset="utf-8">
-  <title>The place for your entainterment</title>
+  <title>The place for your entertainment</title>
   <base href="skerbnetwork.github.io">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
